Skip whitespace and create arguments correctly in ArgumentLoop
Signed-off-by: GoldenStack <goldenfire64yt@gmail.com>